--- a/experiments/setup_configs.ipynb
+++ b/experiments/setup_configs.ipynb
@@ -39,7 +39,7 @@
     "# Global configuration:\n",
     "####\n",
     "\n",
-    "verbose = True\n",
+    "verbose = False\n",
     "\n",
     "sample_rate = 96_000\n",
     "seed = 42\n",
@@ -139,92 +139,7 @@
     "    print(config)"
    ],
    "id": "41fd586889de35c4",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Configuration(comment='Configuration for software simulation that proves the '\n",
-      "                      'concept of parameter identification of SM-Systems.\\n'\n",
-      "                      '\\n'\n",
-      "                      'Pre-filter:     Lag compensator with:\\n'\n",
-      "                      '                - -60 deg minimum @ 2 khz (x²)\\n'\n",
-      "                      '                - -45 deg minimum @ 2 khz (x³)\\n'\n",
-      "                      '\\n'\n",
-      "                      'Post-filter x²: Lead compensator with:\\n'\n",
-      "                      '                - +60 deg maximum @ 4 khz (x²)\\n'\n",
-      "                      '                - +45 deg maximum @ 6 khz (x³)\\n'\n",
-      "                      '\\n',\n",
-      "              tags=['software_simulation',\n",
-      "                    'prove_of_concept',\n",
-      "                    'solvable',\n",
-      "                    'author'],\n",
-      "              _last_accessed='2025/06/27_11:27:20',\n",
-      "              path='experiments/prove_of_concept/',\n",
-      "              filter_tabs=1024,\n",
-      "              probes_n=68,\n",
-      "              probes_fbase=1000,\n",
-      "              probes_fvoice=16000,\n",
-      "              probes_batches=8,\n",
-      "              probes_resolution=1000,\n",
-      "              probes_signaltime=0.010666666666666666,\n",
-      "              probes_transient_time=np.float64(0.004),\n",
-      "              probes_fft_n=1024,\n",
-      "              probes_fft_delta=93.75,\n",
-      "              seed=42,\n",
-      "              samplerate=96000,\n",
-      "              active_sm_paths=[1, 2, 3],\n",
-      "              max_order=3,\n",
-      "              dut='serial_number',\n",
-      "              snr=0.0,\n",
-      "              hardware_latency=0,\n",
-      "              delay=0.0,\n",
-      "              filter1_type='Notch 2nd',\n",
-      "              filter1_fc=1000,\n",
-      "              filter1_q=0.707,\n",
-      "              filter1_zeros=[],\n",
-      "              filter1_poles=[],\n",
-      "              filter1_gain=1.0,\n",
-      "              filter1_tabs=1024,\n",
-      "              filter21_type='Low-pass 1st',\n",
-      "              filter21_fc=10000,\n",
-      "              filter21_q=0.707,\n",
-      "              filter21_lag=45.0,\n",
-      "              filter21_zeros=np.float64(46898.33359952895),\n",
-      "              filter21_poles=np.float64(3367.148857907732),\n",
-      "              filter21_gain=1,\n",
-      "              filter21_tabs=128,\n",
-      "              filter22_type='High-pass 1st',\n",
-      "              filter22_fc=1000,\n",
-      "              filter22_q=0.707,\n",
-      "              filter22_lag=45.0,\n",
-      "              filter22_zeros=np.float64(6734.2977158154645),\n",
-      "              filter22_poles=np.float64(93796.66719905789),\n",
-      "              filter22_gain=1,\n",
-      "              filter22_tabs=128,\n",
-      "              filter31_type='Low-pass 1st',\n",
-      "              filter31_fc=10000,\n",
-      "              filter31_q=0.707,\n",
-      "              filter31_lag=45.0,\n",
-      "              filter31_zeros=np.float64(30337.902366992632),\n",
-      "              filter31_poles=np.float64(5205.161138274292),\n",
-      "              filter31_gain=1,\n",
-      "              filter31_tabs=128,\n",
-      "              filter32_type='High-pass 1st',\n",
-      "              filter32_fc=1000,\n",
-      "              filter32_q=0.707,\n",
-      "              filter32_lag=45.0,\n",
-      "              filter32_zeros=np.float64(15615.483414822875),\n",
-      "              filter32_poles=np.float64(91013.7071009779),\n",
-      "              filter32_gain=1,\n",
-      "              filter32_tabs=128,\n",
-      "              constraint_amp_s2='ONE',\n",
-      "              constraint_amp_s3='ONE',\n",
-      "              constraint_phase_s2='ONE',\n",
-      "              constraint_phase_s3='ONE')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "execution_count": 3
   },
   {
